SubVersion: $Id$
	
Log:

- xx/xx/2010, version 1.1.6: debrouxl
	- change encoding in .rc file.
	- update the documentation of a number of functions in calc_xx.c.

- 08/04/2010, version 1.1.5: debrouxl
	- TI-8x (Z80) ROM dumper source code relicensed to GPL, with Benjamin Moody's authorization.
	- TI-68k: when receiving a variable, strip the folder name if any.
	- added several missing "break;" in a switch() construct (calc_89.c).
	  Reported by Patrick Pélissier.
	- added DirectLink USB ROM dumper for 84+ contributed by Brandon Wilson.
	- major fix: make Nspire connection reliable, at the expense of latency.
	- fixed cmd_s_execute (DUSB command) for 84+, perform more testing for both 89T and 84+.
	- renamed CMD_FM_UNKNOWN to CMD_FM_ATTRIBUTES.
	- updated translations.
	- updated to Autoconf 2.65.

- 05/05/2009, version 1.1.4: roms
	- added new DBUS error code (invalid FLASH app signature)

- 08/08/2008, version 1.1.3: roms
	- modified to support NSpire OS 1.4 (LOGIN packet with disconnection)

- 26/01/2008, version 1.1.2: roms
	- added real support of OS 1.2 & 1.3 (true LOGIN packet support)
	- NSpire sequence number implemented fine now
	- NSpire CAS tested: fixed copying of Product Name
	- fixed bug #1885785 (error making libticalcs 1.1.0 on OS-X)

- 22/01/2008, version 1.1.1: roms
	- added unknown directory list command for NSpire
	
- 16/10/2007, version 1.1.0: roms
	- adding NSpire support...
	- unified Product Number & Main Calc Id into Product Id and maintained compatibility
	- use ticables_get_usb_devices() to probe USB hand-helds rathen than heuristic method (more reliable)
	- fixed printing of SKP packet (1 byte)

- 04/10/2007, version 1.0.9: roms
	- fixed ROM dumping on TI92+/V200: switching to HOME screen failed
	- ROM dumping thru SilverLink under Linux is sometimes failing
	- added pause between file sending and ready check (fix bug #1808645?)
	- replaced some raw key codes by #defined ones